Updated readme.txt.
git-svn-id: https://ncisvn.nci.nih.gov/svn/coppa/trunk/code@19087 553898ca-32d5-487a-af8b-6cf4ca579ab4